# PlotDigitizer

./: Makefile  pyproject.toml
plotdigitizer/: axis.py  console.py  core.py  gui.py  helper.py  numutil.py  plotdigitizer.py
tests/: test_app.py  test_core.py
