[tool.poetry]
name = "plotdigitizer"
version = "0.2.dev"
description = "Extract raw data from plots images"
authors = ["Dilawar Singh <dilawar.s.rajput@gmail.com>"]
maintainers = ["Dilawar Singh <dilawar.s.rajput@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dilawar/PlotDigitizer"
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.5.1"
numpy = "^1.19.5"
matplotlib = "^3.3.4"
PySimpleGUI = "^4.34.0"
typer = "^0.3.2"
loguru = "^0.5.3"
screeninfo = "^0.6.7"
Pillow = "^8.1.0"
geometry = {git = "https://github.com/dilawar/Geometry"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
plotdigitizer = 'plotdigitizer.console:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
